Moving button down to avoid being hidden by autocomplete

--- a/src/main/webapp/main.css
+++ b/src/main/webapp/main.css
@@ -42,7 +42,7 @@
 
    input[type=submit] {
      font-size: 1.0em;
-     margin-top: 2px;
+     margin-top: 15px;
      width: 100%;
    }
 
